added more information in placeholder to prevent users from entering UppercaseLetters

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <h1>FlipText</h1>
         <p> A stupid app that turns your text upside down!</p>
     </div>
-    <textarea placeholder="your text here" id="sourceTextArea"></textarea></br>
+    <textarea placeholder="your text here in lowercase" id="sourceTextArea"></textarea></br>
     <p id="mirror"> Invisible mirror Here !!! </p>
     <textarea id="outputText" placeholder="flipped will arrive here"></textarea>
 </body>
